--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "prismjs": "^1.30.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^15.6.6",
+    "sonner": "^2.0.7",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1"
   },
