--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@reduxjs/toolkit": "^2.9.0",
     "@tailwindcss/typography": "^0.5.19",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
@@ -22,6 +23,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-redux": "^9.2.0",
     "react-syntax-highlighter": "^15.6.6",
     "sonner": "^2.0.7",
     "swiper": "^12.0.2",
